# roca

./: .beans.yml  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-AGPL  LICENSE-MIT  README.md  ROADMAP.md  commitlint.config.js  install.sh  package.json
.beans/: roca-w4hz--fixjs-match-expression-evaluates-subject-multiple.md
.claude/: hookify.tests-reveal-bugs.local.md  settings.json
.claude/agents/: code-reviewer.md  cross-target-verifier.md  docs-keeper.md  memory-tracker.md  proof-agent.md  regression-hunter.md  roca-feature-crate.md  roca-ticket-fix.md  roca-ticket-verify.md  spec-guardian.md  stress-tester.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security.yml
.github/workflows/: ci.yml  commitlint.yml  publish-runtime.yml  release.yml
_oldcrates/roca-ast/: Cargo.toml
_oldcrates/roca-cli/: Cargo.toml
_oldcrates/roca-cranelift/: Cargo.toml
_oldcrates/roca-cranelift/src/: cranelift_type.rs  emit_helpers.rs  registry.rs  tests_memory.rs  types.rs
_oldcrates/roca-cranelift/src/api/: function.rs
_oldcrates/roca-cranelift/src/builder/: ir.rs
_oldcrates/roca-lsp/: Cargo.toml
_oldcrates/roca-lsp/src/: lib.rs
_oldcrates/roca-native/: Cargo.toml
_oldcrates/roca-resolve/: Cargo.toml
crates/roca-ast/: Cargo.toml
crates/roca-check/: Cargo.toml
crates/roca-check/src/: context.rs  lib.rs  rule.rs  rules.rs  walker.rs
crates/roca-check/src/rules/: crash.rs  docs.rs  methods.rs  mod.rs  ownership.rs  satisfies.rs  self_test.rs  structs.rs  tests.rs  types.rs  unhandled.rs  variables.rs
crates/roca-check/src/tests/: acceptance.rs  ownership.rs  types.rs
crates/roca-cli/: Cargo.toml
crates/roca-cli/src/: build.rs  check.rs  gen_extern.rs  lib.rs  main.rs  repl.rs  search.rs
crates/roca-cranelift/: Cargo.toml
crates/roca-cranelift/src/: context.rs  cranelift_type.rs  emit_helpers.rs  helpers.rs  lang_type.rs  lib.rs  module.rs  registry.rs  tests_memory.rs  types.rs
crates/roca-cranelift/src/api/: body.rs  function.rs  mod.rs
crates/roca-cranelift/src/builder/: compiler.rs  ir.rs  mod.rs
crates/roca-emit/: Cargo.toml
crates/roca-errors/: Cargo.toml
crates/roca-js/: Cargo.toml
crates/roca-js/src/: dts.rs  expressions.rs  functions.rs  lib.rs  shapes.rs  statements.rs  tests.rs
crates/roca-lang/: Cargo.toml
crates/roca-mem/: Cargo.toml
crates/roca-native/: Cargo.toml
crates/roca-native/src/: builder.rs  compiler.rs  helpers.rs  lib.rs  property_tests.rs  runtime.rs  test_helpers.rs  test_runner.rs  tests.rs  tests_basic.rs  tests_control.rs  tests_features.rs  tests_integration.rs  tests_memory.rs  tests_memory_complex.rs  tests_memory_stdlib.rs  tests_stdlib.rs  tests_stdlib_ext.rs  tests_stdlib_integration.rs  types.rs
crates/roca-native/src/emit/: compile.rs  context.rs  emit.rs  expr.rs  helpers.rs  methods.rs  mod.rs  stmt.rs
crates/roca-native/src/runtime/: mod.rs
crates/roca-parse/: Cargo.toml
crates/roca-runtime/: Cargo.toml
crates/roca-runtime/src/: lib.rs  stdlib.rs
crates/roca-types/: Cargo.toml
dev/: roca_jit.pp  roca_jit.te
docs/: book.toml  grammar.md  highlight-roca.js  ownership.md  roca-theme.css
docs/src/: SUMMARY.md  getting-started.md  introduction.md
editors/vscode/: language-configuration.json  package.json
examples/: adapter.roca  arithmetic.roca  bad_test.roca  broken.roca  closures.roca  control_flow.roca  crash_test.roca  email.roca  hello.roca  ownership.roca  strings.roca  structs.roca
examples/blog-api/: CLAUDE.md  package-lock.json  package.json  roca.toml  schema.sql  wrangler.toml
examples/listings/: CLAUDE.md  package-lock.json  package.json  roca.toml  schema.sql  wrangler.toml
examples/worker/: .gitignore  CLAUDE.md  package-lock.json  package.json  roca.toml  worker-configuration.d.ts  wrangler.toml
roca-lsp/: Cargo.toml
roca-lsp/src/: backend.rs  diagnostics.rs  main.rs
src/: constants.rs  errors.rs  init.rs  lib.rs  main.rs  manual.txt  patterns.txt  resolve.rs  skills.md
src/ast/: crash.rs  err.rs  expr.rs  mock.rs  mod.rs  nodes.rs  stmt.rs  test_block.rs  types.rs
src/check/: context.rs  contracts.rs  crash.rs  methods.rs  mod.rs  registry.rs  rule.rs  satisfies.rs  structs.rs  tests.rs  variables.rs  walker.rs
src/cli/: build.rs  check.rs  config.rs  gen_extern.rs  log.rs  mod.rs  repl.rs  runtime.rs  search.rs
src/emit/: ast_helpers.rs  contracts.rs  crash.rs  dts.rs  expressions.rs  functions.rs  helpers.rs  mod.rs  shapes.rs  statements.rs  structs.rs  test_harness.rs
src/lsp/: backend.rs  completion.rs  diagnostics.rs  mod.rs  symbols.rs
src/native/: emit.rs  helpers.rs  mod.rs  property_tests.rs  runtime.rs  test_helpers.rs  test_runner.rs  tests_basic.rs  tests_control.rs  tests_features.rs  tests_integration.rs  tests_memory.rs  tests_memory_complex.rs  tests_memory_stdlib.rs  tests_stdlib.rs  tests_stdlib_ext.rs  tests_stdlib_integration.rs  types.rs
src/parse/: contract.rs  crash.rs  expr.rs  expr_tests.rs  function.rs  mock.rs  mod.rs  parser.rs  parser_tests.rs  satisfies.rs  string_interp.rs  struct_def.rs  test_block.rs  tokenizer.rs
stdlib/: json.roca  primitives.roca  roca-test.js
syntax/: roca.tmLanguage.json
test-project/: contracts.roca  email.roca  handler.roca  user.roca  utils.roca
tests/: lsp_e2e.rs
tests/integration/: closures_hof.roca  enum_ast.roca  error_handling.roca  struct_methods.roca
tests/js/: .gitignore  README.md  compiler.test.js  cross_module.rs  crossfile.test.js  fuzz.rs  imports.rs  package.json  runtime.test.js  stdlib.test.js  test.sh  verify.test.js
tests/stdlib/: test_array.roca  test_char.roca  test_crash_nested.roca  test_crash_strategies.roca  test_crypto.roca  test_encoding.roca  test_error_propagation.roca  test_fs.roca  test_http.roca  test_json.roca  test_math.roca  test_path.roca  test_process.roca  test_string.roca  test_time.roca  test_url.roca
tests/verify/: adapter.rs  arrays.rs  bytes.rs  closures.rs  comparisons.rs  constraints.rs  contracts.rs  control_flow.rs  crash.rs  cross_module.rs  crypto.rs  emit_edge_cases.rs  encoding.rs  (+32 more)
(+372 files in other folders)
