[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/cameronrothenburg/roca"

[workspace.dependencies]
roca-lang = { path = "crates/roca-lang" }
roca-mem = { path = "crates/roca-mem" }
roca-parse = { path = "crates/roca-parse" }
roca-check = { path = "crates/roca-check" }
