[package]
name = "roca-cranelift"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generic Cranelift IR toolkit for building language compilers — function builders, control flow, memory management"
repository.workspace = true

[dependencies]
roca-types.workspace = true
roca-runtime.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-module.workspace = true
cranelift-jit.workspace = true
