[package]
name = "roca-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Language Server Protocol implementation for the Roca compiler"
repository.workspace = true

[dependencies]
roca-ast.workspace = true
roca-errors.workspace = true
roca-parse.workspace = true
roca-check.workspace = true
roca-resolve.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
dashmap.workspace = true
