[package]
name = "roca-cranelift"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cranelift IR toolkit, memory management, and emit context for the Roca compiler"
repository.workspace = true

[dependencies]
roca-ast.workspace = true
roca-runtime.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-module.workspace = true
cranelift-jit.workspace = true
