[package]
name = "roca-js"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "JavaScript and TypeScript (.d.ts) code generation for the Roca compiler"
repository.workspace = true

[dependencies]
roca-ast.workspace = true
oxc_allocator.workspace = true
oxc_ast.workspace = true
oxc_codegen.workspace = true
oxc_span.workspace = true

[dev-dependencies]
roca-parse.workspace = true
