[package]
name = "roca-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime stdlib and memory management for the Roca JIT compiler"
repository.workspace = true

[dependencies]
uuid.workspace = true
url.workspace = true
serde_json.workspace = true
sha2.workspace = true
base64.workspace = true
reqwest.workspace = true
tokio.workspace = true
